# EXkururuEDR

./: .gitignore  CONTRIBUTING.md  README.4stack.md  README.en.md  README.md  pyproject.toml
agent-lite/: Cargo.toml  README.md
agent-lite/src/: main.rs
docs/: PACKAGING.md  auth_shared_secret_contract.md
examples/: agent_config.json  body_event.json  edr_events_sample.csv  local_rules.yml  policy_default.json  trusted_sources.json
rust_rule_bench/: Cargo.toml
rust_rule_bench/src/: main.rs
scripts/: benchmark_edr.py  benchmark_rule_engine_py_vs_rust.py  benchmark_rule_engine_python.py
src/exkururuedr/: __init__.py  agent_cli.py  auth.py  auth_cli.py  cli.py  collector.py  config.py  health.py  normalize.py  response.py  rule_engine.py  rules.py  spool.py  standalone_server.py  standalone_storage.py  trusted_sources.py  xdr_client.py
tests/: test_agent_skeleton.py  test_auth.py  test_collector.py  test_normalize.py  test_orchestrator_mapping.py  test_response.py  test_rule_engine.py  test_standalone_storage.py  test_xdr_client.py
